-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.6.0
-
macOS 10.13
When the Android NDK path is populated it will crash with:
Process: Qt Creator [303] Path: /Users/USER/*/Qt Creator.app/Contents/MacOS/Qt Creator Identifier: org.qt-project.qtcreator Version: 4.6 (4.6.0) Code Type: X86-64 (Native) Parent Process: ??? [1] Responsible: Qt Creator [303] User ID: 507 Date/Time: 2018-04-04 12:09:18.989 -0400 OS Version: Mac OS X 10.13.3 (17D47) Report Version: 12 Anonymous UUID: E4AB58A0-5EE7-BE46-D38F-33BE682D9A3F Sleep/Wake UUID: FD829C46-B92E-430D-A441-6B0A2D1A8184 Time Awake Since Boot: 880000 seconds Time Since Wake: 840000 seconds System Integrity Protection: enabled Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x00000000000000f0 Exception Note: EXC_CORPSE_NOTIFY Termination Signal: Segmentation fault: 11 Termination Reason: Namespace SIGNAL, Code 0xb Terminating Process: exc handler [0] VM Regions Near 0xf0: --> __TEXT 0000000105aff000-0000000105b12000 [ 76K] r-x/rwx SM=COW /Users/USER/*/Qt Creator.app/Contents/MacOS/Qt Creator Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libAndroid.dylib 0x000000010d240bc8 Android::Internal::Andro idToolChainFactory::versionCompareLess(QList<Android::Internal::AndroidTool Chain*>, QList<Android::Internal::AndroidToolChain*>) + 24 1 libAndroid.dylib 0x000000010d23f7bc Android::Internal::Andro idToolChainFactory::autodetectToolChainsForNdk(Utils::FileName const&, QList<ProjectExplorer::ToolChain*> const&) + 2044 2 libAndroid.dylib 0x000000010d21af5c Android::AndroidConfigurations::registerNewToolChains() + 188 3 libAndroid.dylib 0x000000010d21aa40 Android::AndroidConfigurations::setConfig(Android::AndroidConfig const&) + 48 4 libCore.dylib 0x000000010b49e50d Core::Internal::SettingsDialog::accept() + 253 5 org.qt-project.QtCore 0x0000000106a94f7b QMetaObject::activate(QObject*, int, int, void**) + 2347 6 org.qt-project.QtWidgets 0x0000000105f59507 QDialogButtonBoxPrivate::_q_handleButtonClicked() + 311 7 org.qt-project.QtCore 0x0000000106a951da QMetaObject::activate(QObject*, int, int, void**) + 2954 8 org.qt-project.QtWidgets 0x0000000105eb35bf QAbstractButtonPrivate::emitClicked() + 111 9 org.qt-project.QtWidgets 0x0000000105eb3452 QAbstractButtonPrivate::click() + 226 10 org.qt-project.QtWidgets 0x0000000105eb46bf QAbstractButton::mouseReleaseEvent(QMouseEvent*) + 271 11 org.qt-project.QtWidgets 0x0000000105df4680 QWidget::event(QEvent*) + 496 12 org.qt-project.QtWidgets 0x0000000105eb4221 QAbstractButton::event(QEvent*) + 145 13 org.qt-project.QtWidgets 0x0000000105dba752 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 306 14 org.qt-project.QtWidgets 0x0000000105dbd4ed QApplication::notify(QObject*, QEvent*) + 7165 15 org.qt-project.QtCore 0x0000000106a63f7f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159 16 org.qt-project.QtWidgets 0x0000000105dbb080 QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) + 896 17 org.qt-project.QtWidgets 0x0000000105e14761 QWidgetWindow::handleMouseEvent(QMouseEvent*) + 1777 18 org.qt-project.QtWidgets 0x0000000105e13430 QWidgetWindow::event(QEvent*) + 224 19 org.qt-project.QtWidgets 0x0000000105dba752 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 306 20 org.qt-project.QtWidgets 0x0000000105dbba6f QApplication::notify(QObject*, QEvent*) + 383 21 org.qt-project.QtCore 0x0000000106a63f7f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159 22 org.qt-project.QtGui 0x0000000106378e1c QGuiApplicationPrivate:: processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) + 2956 23 org.qt-project.QtGui 0x000000010635fefb QWindowSystemInterface:: sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 155 24 libqcocoa.dylib 0x0000000108de35b1 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 33 25 com.apple.CoreFoundation 0x00007fff41181721 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
If the path is entered in 4.5.2 and then 4.6.0 is started then it still crashes.