Android: create a new toolchain when missing target triple

Though it should not happen that a toolchain is missing the triple
but in case the detection fails a new toolchain shall be created and
the misbehaving toolchain should be deleted

Task-number: QTCREATORBUG-20217
Change-Id: Iaa86331730f82b8e5abd37f1184a53d1e1312979
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>
Reviewed-by: Ivan Donchevskii <ivan.donchevskii@qt.io>